# sessions

./: .clang-format  .gitignore  CMakeLists.txt
include/database/: Connection.h  Connection_fwd.h  Exceptions.h  Query.h  Query_fwd.h
src/core/type_traits/: CMakeLists.txt  is_optional_v.h
src/database/: CMakeLists.txt  Connection.cpp  Connection.h  Connection_fwd.h  Exceptions.h  Query.cpp  Query.h  isTableExist.cpp  isTableExist.h
src/database/sqlite/: shell.c  sqlite3.h  sqlite3ext.h
src/database/tests/: CMakeLists.txt  connectionTests.cpp  isTableExistTests.cpp  queryTests.cpp
